Finished the resume section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="resume-item9description">List skill/technologies here. You can change the icon above 
                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                hr
+                <hr>
                 <div class="resume-item">
                     <h2 class="resume-item-title">Master in Computer Engineering
                     </h2>
@@ -132,7 +132,7 @@
                         <p class="resume-item9description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
-                    hr
+                    <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering
                         </h2>
@@ -150,7 +150,9 @@
                     </div>
                 </div>
             </div>
-
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
+            <div>
 
 
 
