--- a/index.html
+++ b/index.html
@@ -174,7 +174,14 @@
 
 
         <div class="footer-column">
-            <h3 class="section-title">Let’s Message me</h3>
+            <h3 class="section-title">Let's Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="text" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+                
+            </form>
         </div>
     </footer>
     
