--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button class="btn-primary">Download CV</button>
                     <button class="btn-primary">Contact</button>
                 </div>
-                <img class="profile-pic" src="/images/hardy.png" alt="">
+                <img class="profile-pic" src="./images/hardy.png" alt="">
             </div>
         
 
@@ -174,7 +174,7 @@
 
 
         <div class="footer-column">
-            <h3 class="section-title">Let's Message me</h3>
+            <h3 class="section-title">Let's Message me Right Now</h3>
             <form class="contact" action="">
                 <input type="text" placeholder="Your name">
                 <input type="text" placeholder="Your email">
